logs/offboard_pkg/build.make.192.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:48:12: error: cannot convert ‘ros::Rate’ to ‘ros::Rate*’ in assignment
   48 |     rate = rate0;
      |            ^~~~~
      |            |
      |            ros::Rate
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::WaitAllFCU()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:63:10: error: request for member ‘sleep’ in ‘((MultiBody*)this)->MultiBody::rate’, which is of pointer type ‘ros::Rate*’ (maybe you meant to use ‘->’ ?)
   63 |     rate.sleep();
      |          ^~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::WaitAllGPS()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:79:10: error: request for member ‘sleep’ in ‘((MultiBody*)this)->MultiBody::rate’, which is of pointer type ‘ros::Rate*’ (maybe you meant to use ‘->’ ?)
   79 |     rate.sleep();
      |          ^~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::AllTakeoff()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:94:10: error: request for member ‘sleep’ in ‘((MultiBody*)this)->MultiBody::rate’, which is of pointer type ‘ros::Rate*’ (maybe you meant to use ‘->’ ?)
   94 |     rate.sleep();
      |          ^~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::AllWayPoints()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:118:18: error: request for member ‘sleep’ in ‘((MultiBody*)this)->MultiBody::rate’, which is of pointer type ‘ros::Rate*’ (maybe you meant to use ‘->’ ?)
  118 |             rate.sleep();
      |                  ^~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
